--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="description" content="utsob majumder">
     <meta name="keywords" content="utsob majumder,utsob,Utsob">
     <meta name="author" content="utsob majumder">
+    <meta name="google-site-verification" content="xR29Uz85ibtFNjeGxwul4-1gg9tBjsFrGFUNHHVoduw" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
