--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Page title</title>
+    <title>Utsob Majumder | Tech Enthusiast from Bangladesh</title>
+    <meta name="description" content="Utsob Majumder is a young tech enthusiast and developer from Bangladesh. See his portfolio and projects.">
+    <meta name="keywords" content="Utsob Majumder, Utsob, CoderUtsob, Bangladesh Developer, Portfolio">
+    <meta property="og:title" content="Utsob Majumder Portfolio">
+    <meta property="og:description" content="Young tech enthusiast from Bangladesh. Check his work!">
     <meta name="google-site-verification" content="xR29Uz85ibtFNjeGxwul4-1gg9tBjsFrGFUNHHVoduw" />
     <meta property="og:title" content="Utsob Majumder Portfolio">
     <meta property="og:description" content="Young tech enthusiast from Bangladesh!">
