--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
             position: relative ;
             user-select:none;
             background: #c0c0c0;
+            overflow-x:hidden;
         }
         .nav {
            display: flex;
