--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta name="keywords" content="utsob majumder,utsob,Utsob">
     <meta name="author" content="utsob majumder">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-    <link rel="icon" href="" type="image/png">
+    <link rel="icon" href="<img src='https://i.postimg.cc/XGWLR9Px/file-00000000301061fdb2ba6a11ee986d83.jpg' border='0' alt='file-00000000301061fdb2ba6a11ee986d83'/>" type="image/png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=menu" />
     <!-- AOS CSS -->
