--- a/index.html
+++ b/index.html
@@ -342,14 +342,6 @@ button:hover {
             background-color:#c0c0c0;
         }
     </style>
-   
-
-<script type="module">
-  import Chatbot from "https://cdn.jsdelivr.net/npm/@denserai/embed-chat@1/dist/web.min.js";
-  Chatbot.init({
-    chatbotId: "bac97c92-95d1-47ba-8d86-6ec2b20d9104",
-  });
-</script>  
   </head>
 <body>
     <div class="nav">
@@ -365,9 +357,9 @@ menu
    </div>
         
         <div class="submenu">
-            <a href="https://utsobmajumdar.tiiny.site">Home</a>
-            <a href="">Hire Me</a>
-            <a href="">Skills</a>
+            <a href="https://coderutsob.github.io">Home</a>
+            <a href="https://coderutsob.github.io/-hireme/">Hire Me</a>
+            <a href="https://coderutsob.github.io/-hireme/">Skills</a>
             <a href="">Résumé</a>
         </div>
             <section class="all-detail" >
@@ -426,7 +418,7 @@ I love turning creative ideas into real projects and learning new things every d
 </div>
    <div class="contact">
    
-   <a href=""class="git"><i class="fab fa-github"></i></a>
+   <a href="https://www.github/coderutsob/"class="git"><i class="fab fa-github"></i></a>
 
  <a href=""class="whats"><i class="fab fa-whatsapp"></i></a>
 <a href="https://www.instagram.com/coder_utsob?igsh=dGxkZXIzZTh0MnZy"target="blank"class="insta"><i class="fab fa-instagram"></i></a>
