--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
             gap:20px;
             margin-top:0px;
             width: 100%;
+            overflow-x:hidden;
         }
         .all-detail div{
             margin:5%;
