--- a/index.html
+++ b/index.html
@@ -366,9 +366,9 @@ menu
    </div>
         
         <div class="submenu">
-            <a href="/storage/emulated/0/Android/data/com.teejay.trebedit/files/TrebEdit user files/Database/Hamburg.html">Home</a>
-            <a href="/storage/emulated/0/Android/data/com.teejay.trebedit/files/TrebEdit user files/hireme.html">Hire Me</a>
-            <a href="/storage/emulated/0/Android/data/com.teejay.trebedit/files/TrebEdit user files/skill.html">Skills</a>
+            <a href="https://coderutsob.github.io/">Home</a>
+            <a href="https://coderutsob.github.io/-hireme/">Hire Me</a>
+            <a href="https://coderutsob.github.io/-hireme/">Skills</a>
             <a href="">Résumé</a>
         </div>
             <section class="all-detail" >
