--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
             position: relative ;
             user-select:none;
             background: #c0c0c0;
+            width: 100%;
+            overflow-x:hidden;
         }
         .nav {
            display: flex;
