--- a/index.html
+++ b/index.html
@@ -417,13 +417,13 @@ I love turning creative ideas into real projects and learning new things every d
   height="600px"
   frameborder="0"
   style="border-radius: 1.5rem;box-shadow:  0 20px 40px rgba(0, 0, 0, 0.3), 0 10px 15px rgba(0, 0, 0, 0.1);"
-  src="https://denser.ai/u/embed/b5feb010-fb7d-40e7-b0b8-495dad631001">
+  src="https://denser.ai/u/embed/558b38c1-ec1d-442d-8be4-9d48fc37d2b2">
 </iframe>
 </div>
 </div>
    <div class="contact">
    
-   <a href="https://xhamster.com"class="git"><i class="fab fa-github"></i></a>
+   <a href=""class="git"><i class="fab fa-github"></i></a>
 
  <a href=""class="whats"><i class="fab fa-whatsapp"></i></a>
 <a href="https://www.instagram.com/coder_utsob?igsh=dGxkZXIzZTh0MnZy"target="blank"class="insta"><i class="fab fa-instagram"></i></a>
