--- a/index.html
+++ b/index.html
@@ -414,11 +414,10 @@ I love turning creative ideas into real projects and learning new things every d
 <div class="chatbot">
    <iframe
   width="100%"
-  height="600px"
+  height="800px"
   frameborder="0"
-  style="border-radius: 1.5rem;box-shadow:  0 20px 40px rgba(0, 0, 0, 0.3), 0 10px 15px rgba(0, 0, 0, 0.1);"
   src="https://denser.ai/u/embed/558b38c1-ec1d-442d-8be4-9d48fc37d2b2">
-</iframe>
+   </iframe>
 </div>
 </div>
    <div class="contact">
@@ -454,7 +453,7 @@ let buttonclick=0
     submenu.style.display = "none";
   }
   else {
-    submenu.style.display = "flex";
+    submenu.style.display = "fle";
   }
   }
   /* 8 */
