--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@ let buttonclick=0
     submenu.style.display = "none";
   }
   else {
-    submenu.style.display = "fle";
+    submenu.style.display = "flex";
   }
   }
   /* 8 */
