--- a/index.html
+++ b/index.html
@@ -139,9 +139,9 @@
             font-style: normal;
             text-align:center ;
             transition:transform 1s ease;
-            animation:cardshow;
+            animation:cardshow liner both;
             animation-timeline:view();
-            animation-range:20% entry;
+            animation-range:70% entry;
             
         }
         @keyframes cardshow {
@@ -177,7 +177,7 @@
             border-radius: 10px;
             gap:20px;
             transition:transform 1s ease;
-            animation:cardshow;
+            animation:cardshow liner both;
             animation-timeline:view();
             animation-range:20% entry;
         }
@@ -210,9 +210,9 @@
             border-radius: 1rem;
             text-align: center ;
             margin-top:40px;
-            animation:cardshow;
+            animation:cardshow liner both;
             animation-timeline:view();
-            animation-range:20% entry;
+            animation-range:70% entry;
         }
         .skills img{
             border-radius: 10px;
