--- a/index.html
+++ b/index.html
@@ -146,10 +146,10 @@
         }
         @keyframes cardshow {
             from{
-                opacity:0;
+                scale:0;
             }
             to{
-                opacity:1;
+                scale:1;
             }
         }
         .per-info .plogo{
